<?xml version="1.0"?>
<package>
  <name>pluginlib_examples</name>
  <version>0.0.0</version>
  <description>The pluginlib_examples package</description>
  <maintainer email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</maintainer>

  <license>BSD</license>
  <author email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet.xml" />
    <pluginlib_examples plugin="${prefix}/plugin.xml" />
  </export>
</package>
